graph background replaced

--- a/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.scss
+++ b/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.scss
@@ -12,7 +12,8 @@
 
 	display: flex;
 	flex-direction: column;
-	background: url('../../../../assets/img/fw-ng.png');
+	background-image: repeating-linear-gradient(0deg,transparent,transparent 70px,#CCC 70px,#CCC 71px),repeating-linear-gradient(-90deg,transparent,transparent 70px,#CCC 70px,#CCC 71px);
+	background-size: 71px 71px;
 
 	.container{
 		position: relative;
