--- a/src/app/ui-components/viewers/viewer-container/viewer-container.component.scss
+++ b/src/app/ui-components/viewers/viewer-container/viewer-container.component.scss
@@ -1,12 +1,6 @@
 .viewer-toggle{
-	flex-direction: column; 
-
-	position: absolute;
-	top: 10px;
-	right: 10px;
-
-	z-index: 20;
-	
+	flex-direction: row; 
+	width: 100%;
 	background-color: white;
 }
 
@@ -18,4 +12,5 @@
 	margin: 0px;
 
 	overflow: hidden;
+
 }
