--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -10,3 +10,10 @@ $background-color: #EDEDED;
 
 
 $port-size: 15px;
+
+$active-color: #f7f7f7;
+$toolbar-btn-color: #C6C6C6;
+$disabled-color: #6D6A6A;
+
+$default-side-padding: 15px;
+$default-top-padding: 5px;
