--- a/src/app/ui-components/layout/panel/panel.component.scss
+++ b/src/app/ui-components/layout/panel/panel.component.scss
@@ -1,3 +1,5 @@
+@import '~scss/globals';
+
 .header{
 	display: flex; 
 	flex-direction: row; 
@@ -9,6 +11,28 @@
 	height: 30px; 
 	line-height: 30px; 
 	font-size: 14px; 
-	padding: 0px 10px;
+	padding: 0px $default-side-padding;
+
+	.btn-group{
+		display: flex; 
+		flex-direction: row; 
+
+		span{
+			color: $toolbar-btn-color;
+
+			mat-icon{
+				font-size: 14px;
+				cursor: pointer;
+
+				&.disabled{
+					color: $disabled-color !important;
+				}
+				
+				&:hover{
+					color: $active-color;
+				}
+			}
+		}
+	}
 }
 
