--- a/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.scss
+++ b/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.scss
@@ -114,7 +114,7 @@
 							}
 
 							&:hover{
-								background-color: gray;
+								background-color: #ddd;
 								color: white;
 							}
 						}
