--- a/src/app/ui-components/editors/parameter-editor/parameter-editor.component.scss
+++ b/src/app/ui-components/editors/parameter-editor/parameter-editor.component.scss
@@ -22,7 +22,7 @@
 		border-bottom: 1px dashed gray;
 		border-top: 1px dashed gray;
 
-		background-color: #ddd;
+		background-color: white;
 
 		.content{
 			display: flex;
