--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,3 +1,9 @@
+$color1: #395D73;
+$color2: #8AA8C0;
+$color3: #B9DCF5;
+$color4: #F0BFA0;
+$color5: #F07A79;
+
 $toolbar-color: #F7F7F7;
 $toolbar-height: 45px;
 
