--- a/src/app/ui-components/editors/editor/editor.component.scss
+++ b/src/app/ui-components/editors/editor/editor.component.scss
@@ -1,5 +1,7 @@
+@import '~scss/globals';
+
 .editor{
-	background-color: mintcream;
+	background-color: white;
 
 	display: flex; 
 	flex-direction: column;
