--- a/src/app/ui-components/viewers/viewer-container/viewer-container.component.html
+++ b/src/app/ui-components/viewers/viewer-container/viewer-container.component.html
@@ -1,21 +1,21 @@
 <div class="viewer-container">             
 	<mat-button-toggle-group class="viewer-toggle" #group="matButtonToggleGroup">
-		<mat-button-toggle value="0">
+		<mat-button-toggle value="0" class="viewer-toggle-btn">
 		  <mat-icon>description</mat-icon>
 		</mat-button-toggle>
-		<mat-button-toggle value="2">
+		<mat-button-toggle value="2" class="viewer-toggle-btn">
 		  <mat-icon>code</mat-icon>
 		</mat-button-toggle>
-		<mat-button-toggle value="1">
+		<mat-button-toggle value="1" class="viewer-toggle-btn">
 		  <mat-icon>3d_rotation</mat-icon>
 		</mat-button-toggle>
-		<mat-button-toggle value="3" disabled>
+		<mat-button-toggle value="3" disabled class="viewer-toggle-btn">
 		  <mat-icon>text_format</mat-icon>
 		</mat-button-toggle>
-		<mat-button-toggle value="4" disabled>
+		<mat-button-toggle value="4" disabled class="viewer-toggle-btn">
 		  <mat-icon>info_outline</mat-icon>
 		</mat-button-toggle>
-		<mat-button-toggle value="5">
+		<mat-button-toggle value="5" class="viewer-toggle-btn">
 		  <mat-icon>help_outline</mat-icon>
 		</mat-button-toggle>
 	</mat-button-toggle-group>
