--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -35,7 +35,7 @@
 		display: flex;
 		flex-direction: column; 
 
-		background-color: #D8D8D8;
+		background-color: white;
 
 		.wrapper{
 			position: absolute;
