--- a/src/app/ui-components/layout/panel/panel.component.scss
+++ b/src/app/ui-components/layout/panel/panel.component.scss
@@ -4,7 +4,7 @@
 	display: flex; 
 	flex-direction: row; 
 	justify-content: space-between;
-	border: 1px solid $color1;
+	border-bottom: 1px solid $color2;
 	background-color: $color1;
 	color: white; 
 	font-weight: bold;
