--- a/src/styles.scss
+++ b/src/styles.scss
@@ -55,11 +55,11 @@ split-area{
 .mat-expansion-panel-header{
 	height: 30px !important;
 	padding: 0px $default-side-padding !important;
-	background-color: #888686 !important;
+	background-color: $color3 !important;
 	
 
 	&:hover{
-		background-color: #888686 !important;
+		background-color: $color3 !important;
 	}
 }
 
@@ -72,7 +72,7 @@ split-area{
 }
 
 .node-content-wrapper{
-	background-color: lightgrey !important;
+	background-color: $color2 !important;
 	width: 100%;
 	padding: 0px;
 	border-radius: 0px;
