--- a/src/app/ui-components/viewers/parameter-viewer/parameter-viewer.component.scss
+++ b/src/app/ui-components/viewers/parameter-viewer/parameter-viewer.component.scss
@@ -3,22 +3,28 @@
 .viewer{
 	display: flex; 
 	flex-direction: row;
+	flex-wrap:wrap;
 	background-color: white;
 	justify-content: space-between;
+	height: 70%;
+	width: 99%;
+
 	.container{
-		width:100%;
+		height:100%;
+		flex-grow:20;
+		flex-shrink:0;
 		display: flex; 
 		flex-direction: column;
-		justify-content: space-between;
-
-
-
+		direction: rtl;
+		overflow:auto;
+		flex-basis: auto;
 		.paramater-container{
+			flex-grow:1;
+			flex-shrink:0;
+			direction:ltr;
 			display: flex; 
 			flex-direction: row; 
 			justify-content: space-equally;
-
-
 			font-size: 14px;
 			line-height: 18px;
 
@@ -26,9 +32,9 @@
 			margin: 15px; */
 			.info{
 			background-color: $color3;
-			width: 20%;
 			padding: 0 $default-side-padding;
 			color: $color1;
+			width:20%;
 			}
 			/*border-top: 1px dashed $color1;
 			border-bottom: 1px dashed $color1;*/
@@ -45,7 +51,6 @@
 				}
 
 				.content{
-					flex-grow: 1;
 					font-size: 12px;
 				}
 			}
@@ -101,5 +106,4 @@
 	color: white;
 	align-self: flex-end;
 	flex-grow: 1;
-
 }
