--- a/src/app/ui-components/controls/modulebox/modulebox.component.html
+++ b/src/app/ui-components/controls/modulebox/modulebox.component.html
@@ -1,4 +1,12 @@
 <div class="toolbox">
+					
+	<mat-list condensed>
+		<mat-list-item *ngFor="let type of procedureTypes"
+							 		(click)="addProcedure($event, type)">{{getImageForType(type)}}</mat-list-item>
+	</mat-list>
+
+	<hr/>
+
 	<mat-list condensed>
 	 	<mat-list-item class="fn_name" *ngFor="let fn of _moduleList" (click)="addActionProcedure(fn);"> 
 	 	{{ fn.module }}::{{ fn.name }} 
