--- a/src/app/ui-components/editors/parameter-editor/parameter-editor.component.html
+++ b/src/app/ui-components/editors/parameter-editor/parameter-editor.component.html
@@ -21,6 +21,8 @@
 						</mat-panel-description>
 					</mat-expansion-panel-header>
 
+					<span (click)="addPort(node_index, 'in')">Add Input</span>
+
 					<div class='port input' *ngFor="let inp of _inputs; let i=index">
 						
 						<div class="content">
@@ -65,6 +67,8 @@
 						  <!-- This is a summary of the content -->
 						</mat-panel-description>
 					</mat-expansion-panel-header>
+
+					<span (click)="addPort(node_index, 'out')">Add Output</span>
 
 					<div class='port output' *ngFor="let output of _outputs; let o=index">
 						<div class="content">
