gs-viewer added

--- a/src/app/ui-components/viewers/geometry-viewer/geometry-viewer.component.html
+++ b/src/app/ui-components/viewers/geometry-viewer/geometry-viewer.component.html
@@ -1,5 +1,6 @@
 <div class="viewer">
 	<div class="container">
-		<div id="app-geometry-viewer"></div>
+		<gs-viewer [data]="gs_dummy_data"></gs-viewer>
+		<!-- <div id="app-geometry-viewer"></div> -->
 	</div>
 </div>
