--- a/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.scss
+++ b/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.scss
@@ -146,6 +146,10 @@
 						border-style: solid;
 					}
 
+					&.error{
+						background-color: red;
+					}
+
 					.node-name{
 						font-family: sans-serif; 
 						font-size: 14px;
