--- a/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.scss
+++ b/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.scss
@@ -189,6 +189,10 @@
 								background-color: $color2;
 								cursor: pointer;
 
+								&.selected{
+									border: 2px solid black;
+								}
+
 								&:hover{
 									background-color: $color4;
 								}
