--- a/src/app/ui-components/viewers/viewer-container/viewer-container.component.html
+++ b/src/app/ui-components/viewers/viewer-container/viewer-container.component.html
@@ -20,6 +20,10 @@
 		</mat-button-toggle>
 	</mat-button-toggle-group>
 
+	<mat-button-toggle class="viewer-toggle-btn" matTooltip="Lock" (click)="lock()">
+		<mat-icon>lock</mat-icon>
+	</mat-button-toggle>
+
 	<app-geometry-viewer *ngIf="group.value == 0"></app-geometry-viewer>
 	<app-code-viewer *ngIf="group.value == 1"></app-code-viewer>
 	<app-text-viewer *ngIf="group.value == 2"></app-text-viewer>
