--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,6 +4,8 @@ $color3: #B9DCF5;
 $color4: #F0BFA0;
 $color5: #F07A79;
 
+$header-height: 30px;
+
 $toolbar-color: #F7F7F7;
 $toolbar-height: 45px;
 
