--- a/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.html
+++ b/src/app/ui-components/editors/flowchart-viewer/flowchart-viewer.component.html
@@ -23,6 +23,13 @@
 				</section>
 
 				<section>
+					<div (click)="save()">Save File</div>
+					<div (click)="openPicker()">Load File
+					<input #fileInput style="display: none;"
+				  		type="file" (change)="loadFile()"/></div>
+				</section>
+
+				<section>
 					<app-node-library></app-node-library>
 				</section>
 
