--- a/src/app/ui-components/controls/modulebox/modulebox.component.scss
+++ b/src/app/ui-components/controls/modulebox/modulebox.component.scss
@@ -1,10 +1,15 @@
 @import '~scss/globals';
 
 .toolbox{
+	//margin-bottom: $header-height;
+	//margin-bottom: -2* $header-height;
 	height: 100%;
 	background-color: $color3;
+	position: relative;
+	box-sizing: border-box;
+	padding-bottom: $header-height;
 	.toolbox-content{
-		height:	90%;
+		height:	100%;
 		overflow-y: auto;
 		overflow-x: hidden;
 		.fn_name{
