--- a/src/app/ui-components/editors/editor/editor.component.html
+++ b/src/app/ui-components/editors/editor/editor.component.html
@@ -14,9 +14,10 @@
 		</split-area>
 
 		<split-area [visible]="true" [size]="70" order="2">
-			
-		 	<app-parameter-editor></app-parameter-editor>
-			<app-procedure-editor></app-procedure-editor>
+			<div class =" editor-container">
+		 		<app-parameter-editor></app-parameter-editor>
+				<app-procedure-editor></app-procedure-editor>
+			</div>
 		</split-area>
 
     </split>
